--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -25,14 +25,20 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^9.1.2",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/passport-jwt": "^3.0.6",
+    "amazon-cognito-identity-js": "^5.2.10",
     "amqp-connection-manager": "^4.1.6",
     "amqplib": "^0.10.3",
     "aws-sdk": "^2.1223.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
+    "jwks-rsa": "^2.1.4",
     "moment-timezone": "^0.5.37",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
